# opencode-go-mgr

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTORS.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  OPENCODE_GO_ANTI_ABUSE.md  OPENCODE_GO_ANTI_ABUSE.zh-CN.md  README.md  README.zh-CN.md  SECURITY.md  compose.example.yaml  compose.yaml  index.html  package-lock.json  package.json  playwright-debug.mjs  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: container.yml  quality.yml  release.yml
assets/logo/: generate_tauri_icons.py  generate_three_white.py
crates/ocg-cli/: Cargo.toml
crates/ocg-cli/src/: main.rs
crates/ocg-core/: Cargo.toml
crates/ocg-core/src/: admin.rs  auth.rs  crypto.rs  dashboard.rs  db.rs  lib.rs  models.rs  pricing.rs  state.rs
crates/ocg-core/src/gateway/: cost.rs  diagnostics.rs  forwarder.rs  handler.rs  limit.rs  mod.rs  protocol.rs  protocol_stream.rs  selector.rs
crates/ocg-core/tests/: core_state.rs  dashboard_auth.rs  gateway_fallback.rs  success_benchmark.rs
crates/ocg-core/tests/fixtures/: opencode-go.html
docs/: MAINTAINER.md  MAINTAINER.zh-CN.md  USER.md  USER.zh-CN.md
docs/en/: getting-started.md  logo.md
docs/zh/: getting-started.md  logo.md
scripts/: collect-artifacts.mjs  free-dev-port.mjs  generate-updater-manifest.mjs  generate-updater-manifest.test.mjs  release-policy.mjs  release-policy.test.mjs  release.mjs  scan-dead-keys.mjs  smoke-windows-release.ps1  validate-windows-release-smoke.ps1  verify-release-assets.mjs  verify-release-assets.test.mjs
src/: App.vue  i18n.test.ts  main.ts  theme.test.ts  theme.ts
src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json  updater-public-key.sha256
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  crypto.rs  db.rs  lib.rs  main.rs  models.rs  state.rs  tray.rs  updater.rs
src-tauri/src/commands/: account.rs  browser.rs  dashboard.rs  gateway.rs  log.rs  mod.rs  setting.rs  sync.rs
src-tauri/src/gateway/: circuit_breaker.rs  forwarder.rs  handler.rs  mod.rs  selector.rs
src/api/: dev-mock.ts  tauri.ts
src/components/: AccountFormModal.vue  LocaleSwitcher.vue  PricingCatalog.vue  RemoteWizard.vue  StackedBarChart.vue  stacked-bar-chart.test.ts
src/i18n/: index.ts
src/i18n/messages/: de-DE.ts  en-US.ts  es-ES.ts  fr-FR.ts  ja-JP.ts  ko-KR.ts  pt-BR.ts  ru-RU.ts  zh-TW.ts
src/styles/: main.css
src/utils/: async.ts  errors.ts  format.ts
src/views/: Accounts.vue  Applications.vue  Dashboard.vue  Logs.vue  Pricing.vue  Settings.vue  account-lifecycle.test.ts  account-lifecycle.ts  accounts-usage.test.ts  accounts-usage.ts  application-guides.ts  dashboard-connection.test.ts  dashboard-connection.ts  log-time-range.ts  logs.test.ts  pricing-view.test.ts  pricing-view.ts  settings-update-state.ts  settings-update.test.ts
