[workspace]
members = [
    "crates/ocg-core",
    "crates/ocg-cli",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "1.4.1"
edition = "2024"
authors = ["ocg-manager"]
license-file = "LICENSE"
repository = ""
rust-version = "1.85.0"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
