[package]
name = "ocg-manager"
version = "0.1.0"
description = "OpenCode-Go multi-account key manager"
authors = ["ocg-manager"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.85.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ocg-core = { path = "../crates/ocg-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
# tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
