[package]
name = "ocg-manager"
version = "1.2.0"
description = "OpenCode-Go multi-account key manager"
authors = ["ocg-manager"]
license-file = "../LICENSE"
repository = ""
edition = "2024"
rust-version = "1.85.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ocg-core = { path = "../crates/ocg-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
