[package]
name = "ocg-manager-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Headless CLI for OCG Manager gateway"

[[bin]]
name = "ocg-manager-cli"
path = "src/main.rs"

[dependencies]
ocg-core = { path = "../ocg-core" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
