[package]
name = "ocg-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for OCG Manager gateway, account management, cooldown, and fallback"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls-webpki-roots",
] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
# Match Windows browser trust/proxy behavior while retaining WebPKI roots as a fallback.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
    "system-proxy",
] }
